<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joe.famouspeople.QuestionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <EditText
                android:id="@+id/name_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:hint="@string/name_hint"
                />

            <Spinner
                android:id="@+id/fields_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            >
            <CheckBox
                android:id="@+id/doa_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doa_checkbox"
                />
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gender_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="60dp"
                >
                <RadioButton android:id="@+id/male_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_radio_button"

                    />
                <RadioButton android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_radio_button"

                    />
            </RadioGroup>
        </LinearLayout>
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_button"

                />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
